<resources>
    <string name="app_name">Mon Projet De Naissance</string>
    <string name="commencer">Commencer Mon Projet de naissance</string>
    <string name="periode_prenatale">Pendant La Periode prénatale</string>
    <string name="travail">Pendant Le Travail</string>
    <string name="accouchement">Pendant l\'accouchement</string>
    <string name="post_partum">Post Partum</string>
    <string name="info_perso">Informations Personnels</string>
    <string name="nom">Nom :</string>
    <string name="donner_votre_nom">donner votre nom</string>
    <string name="prenom">Prénom :</string>
    <string name="donner_votre_prenom">donner votre Prénom</string>
    <string name="date_accouchement">Date d\'accouchement Prévu :</string>
    <string name="donner_votre_date">Donner la date</string>
    <string name="nom_medecin" translatable="false">Nom du medecin ou sage femme :</string>
    <string name="sexe_enfant">Sexe de mon enfant :</string>
    <string name="donner_nom">Donner le nom</string>
    <string name="prenom_enfant">Prénom de mon enfant :</string>
    <string name="donner_nom_enfant">donner le nom</string>
    <string name="donner_sex">Donner le sexe</string>
    <string name="nom_part">Nom du Partenaire :</string>
    <string name="donner_nom_Partenaire">Donner le nom du partenaire</string>
    <string name="donner_Prenom_Partenaire">Donner le prenom du Partenaire</string>
    <string name="Prenom_part">Prenom du Partenaire :</string>
    <string name="phone_part">Numéro de téléphone :</string>
    <string name="donner_Num_Partenaire">Donner le numero de téléphone du Partenaire</string>
    <string name="prenatale_periode">Pendant la Période Prénatale</string>
    <string name="Q1">1- J\'aimerai suivre ma grossesse par :</string>
    <string name="un_gyn_cologue_de_l_h_pital">Un gynécologue de l’hôpital</string>
    <string name="un_gynécologue_libérale">Un gynécologue libérale</string>
    <string name="un_m_decin_g_n_raliste">Un médecin généraliste</string>
    <string name="une_sage_femme_de_l_hopitale">Une sage femme de l’hopitale</string>
    <string name="une_sage_femme_lib_rale">Une sage femme libérale</string>
    <string name="Q2">2- Je voudrai être prise en charge par mon équipe préférée :</string>
    <string name="Oui">Oui</string>
    <string name="Non">Non</string>
    <string name="Q3">3- Je désirai bien accoucher dans :</string>
    <string name="h_pital_universitaire">Hôpital universitaire</string>
    <string name="h_pital_r_gional">Hôpital régional</string>
    <string name="h_pital_de_circonscription">Hôpital de circonscription</string>
    <string name="en_maternit_priv_e">En maternité privée</string>
    <string name="Q4">4- Je suis intéressée à la programmation à la préparation à la naissance et à la parentalité au moment de :</string>
    <string name="la_grossesse">La grossesse</string>
    <string name="accouchement_">L\'accouchement</string>
    <string name="suites_couches">Suites couches</string>
    <string name="les_diff_rents_moments">Les différents moments</string>
    <string name="travail_period">Pendant le Travail</string>
    <string name="Q5">1- Je voudrai être prise en charge pendant mon hospitalisation par :</string>
    <string name="meme_personne">La même personne de santé qui m’a accueillie</string>
    <string name="sage_femme">Par la sage femme</string>
    <string name="un_m_decin">Par le médecin gynécologue</string>
    <string name="Q6">2- Je souhaiterai une personne de mon entourage soit à mes côtés durant le travail ou à la salle de naissance :</string>
    <string name="Partenaire">Partenaire</string>
    <string name="maman">Maman</string>
    <string name="amie">Amie</string>
    <string name="autre">"autre : "</string>
    <string name="points">.............</string>
    <string name="Q7">3- Je voudrai un accouchement :</string>
    <string name="declenche">Déclenché</string>
    <string name="Naturel">Naturel</string>
    <string name="Q8">4- Je voudrai un abord veineux en place :</string>
    <string name="necessaire">Sauf en nécessité</string>
    <string name="Q9">5- Je voudrai un ERCF :</string>
    <string name="continu">"Continu "</string>
    <string name="Intermittent">Intermittent</string>
    <string name="Q10">6- Je voudrai être examinée par un toucher vaginal :</string>
    <string name="recc">D’heure en heure selon les recommandations</string>
    <string name="necessite">Selon la nécessité</string>
    <string name="Q11">7- Je voudrai faire pendant le travail :</string>
    <string name="exercices">Des exercices de préparation à la naissance et à la parentalité</string>
    <string name="coucher">Se coucher</string>
    <string name="deplacer">Se déplacer</string>
    <string name="Q12">8- Je voudrai gérer les douleurs par :</string>
    <string name="ballon">Utilisation d’un ballon</string>
    <string name="Massage">Massage</string>
    <string name="Acupuncture">Acupuncture</string>
    <string name="douche">Prendre une douche ou un bain</string>
    <string name="Q13">9- Je souhaiterai être informée de chaque intervention avant qu’elle ne soit effectuée:</string>
    <string name="confirmer">confirmer</string>
    <string name="Q14">1- Je voudrai accoucher par :</string>
    <string name="voie_basse">Voie basse</string>
    <string name="cesarienne">Césarienne</string>
    <string name="Q15">2- Je voudrai que l’accouchement soit accélérée si cela est nécessaire :</string>
    <string name="Q16">3- Je souhaiterai avoir des préférences concernant l’ambiance :</string>
    <string name="generale">Ambiance générale, avec musique</string>
    <string name="lumiere">Une lumière douce</string>
    <string name="douce">De calme, parler doucement</string>
    <string name="intime">Un climat intime</string>
    <string name="Q17">4- Je voudrai faire l’analgésie péridurale :</string>
    <string name="Q18">5- Je voudrai accoucher en position :</string>
    <string name="Gynécologique">Gynécologique</string>
    <string name="Debout">Debout</string>
    <string name="Décubitus_Latéral">Décubitus Latéral</string>
    <string name="quatre_patte">A quatre pattes</string>
    <string name="Q19">6- J’accepterai la présence d’autre personnels de santé non concernées dans la salle d’accouchement :</string>
    <string name="Q20">7- Je voudrai que mon partenaire coupe le cordon ombilical :</string>
    <string name="Q21">1- Je souhaiterai que mon bébé soit installé en peau à peau immédiatement après sa sortie :</string>
    <string name="Q22">2- Je voudrai allaiter mon bébé immédiatement après sa sortie :</string>
    <string name="Q23">3- Je voudrai bénéficier de l’aide d’un conseiller en lactation :</string>
    <string name="Q24">4- Je voudrai faire une rééducation périnéale après l’accouchement :</string>
    <string name="Q25">5- Je voudrai avoir une méthode contraceptive après l’accouchement  par :</string>
    <string name="DIU">DIU</string>
    <string name="Pilule">Pilule</string>
    <string name="Dépopnovera">Dépopnovera</string>
    <string name="Implanon">Implanon</string>
    <string name="contraception">Pas de contraception</string>
    <string name="locaux">Des méthodes locaux</string>
    <string name="titre">Mon Projet De Naissance</string>
    <string name="description">Pour le bien naître et votre bien-être</string>
    <string name="creer">Créer gratuitement votre projet de naissance en :</string>
    <string name="Francais">Francais</string>
    <string name="Arabe">العربية</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="confirm_password">Confirmer votre mot de passe</string>
    <string name="register">Créer</string>
    <string name="already_an_user_login">Déja inscrit! Entrer</string>
    <string name="login">Entrer</string>
    <string name="not_yet_registered_signup">Vous n\'avez pas de Compte !Créer Le</string>
    <string name="avantages">avantages</string>
    <string name="inconvenients">Inconvenients</string>
    <string name="basse_a1">Si vous et votre bébé êtes en bonne santé et bénéficiez d’un accompagnement approprié par du personnel qualifié, l’accouchement naturel évite les interventions médicales inutiles et les risques liés à la chirurgie et/ou à l’anesthésie.</string>
    <string name="basse_i1">Un accouchement par forceps ou ventouse est possible si le bébé a du mal à sortir.</string>
    <string name="basse_a2">Un accouchement naturel évite également les complications pour les futures grossesses liées à une\ncicatrice de césarienne, si vous deviez retomber enceinte.</string>
    <string name="basse_i2">Une complication de l’accouchement vaginal pour le bébé est le risque de blessure des nerfs qui\nenvoient des signaux de la moelle épinière à l’épaule, au bras et à la main.</string>
    <string name="basse_a3">Normalement, les femmes qui ont un accouchement par voie basse ont besoin d’un séjour hospitalier\nplus court et se rétablissent plus rapidement que celles qui ont une césarienne.</string>
    <string name="basse_i3">Après la naissance,il y a un risque de douleur du périnée.</string>
    <string name="ces_a1">Si elle est pratiquée avant le début du travail, la césarienne permet d’éviter les douleurs dues à\nl’accouchement et un travail trop long.</string>
    <string name="ces_i1">La durée d’hospitalisation est plus longue après une césarienne qu’après un accouchement par voie\nbasse.</string>
    <string name="ces_a2">Une césarienne programmée réduit les risques d’une césarienne urgente en cours de travail ou d’un\naccouchement par voie basse assisté par forceps ou ventouse.</string>
    <string name="ces_i2">Après une césarienne, vous devez vous attendre à des douleurs abdominales plus importantes au cours\ndes trois premiers mois suivant la naissance et il existe un risque de douleurs persistantes au niveau de\nla plaie pendant 12 mois ou plus.</string>
    <string name="ces_a3">Avec une césarienne, vous aurez moins de douleurs dans le périnée après la naissance du bébé et au\ncours des trois premiers mois suivant la naissance que si vous aviez eu un accouchement par voie\nbasse.</string>
    <string name="ces_i3">Après une césarienne, vous aurez peut-être besoin d’une aide supplémentaire à la maison pour prendre\nsoin de vous et du bébé.</string>
    <string name="nothing" />
    <string name="toucher_vaginal">Le toucher vaginal</string>
    <string name="paragraphe_toucher">"En obstétrique, le Toucher vaginal nous permet d'apprécier l'état du col (sa position,dilatation, effacement et sa consistance ), ainsi la présentation foetale et le bassin . "</string>
    <string name="analgesie">L\'analgesie peridural</string>
    <string name="paragraphe_analgesie">Le peridural est une technique pour controller la douleur pendant l\'accouchement, elle permet la diminution des douleurs et limite la fatigue .</string>
    <string name="preparation">Préparation à la naissance et à la prénatalité</string>
    <string name="paragraphe_preparation">Préparation à la naissance et à la parentalité ce sont des séances qui se font des le 7 éme mois . Ces séances constituent  une \"formation\" théorique et pratique sur le déroulement de la grossesse, de l\'accouchement et des premiers jours qui s\'en suivent.</string>
    <string name="allaitement">Allaitement Maternel</string>
    <string name="conseil1">* Il faut prendre soin des seins avant et aprés chaque telée</string>
    <string name="conseil2">* Avant la telée : nettoyer le sein avec de l\'eau tiéde ou sérum physiologique</string>
    <string name="conseil3">* Aprés la télée : mettre une compresse ou tissue propre sur le sein et laisser une goutte de colostrum sur le mamelon pour prévenir des gerçures et des crevasses</string>
    <string name="consulter_rep">Consulter vos réponses</string>
    <string name="deconnexion">Déconnexion</string>
</resources>