<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.PrenataleActivity"
    android:background="@drawable/roses_background">
    <TextView
        android:id="@+id/prenatal_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sorts_mill_goudy"
        android:text="@string/prenatale_periode"
        android:textSize="35sp"
        android:gravity="center"
        android:textStyle="bold" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            />
        <CheckBox
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/un_gyn_cologue_de_l_h_pital"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
        <CheckBox
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/un_gynécologue_libérale"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
        <CheckBox
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/un_m_decin_g_n_raliste"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
        <CheckBox
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/une_sage_femme_de_l_hopitale"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
        <CheckBox
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/une_sage_femme_lib_rale"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            />
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/Oui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Oui"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                />
            <RadioButton
                android:id="@+id/Non"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Non"
                android:textStyle="bold"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/h_pital_universitaire"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/h_pital_r_gional"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:checked="false"
            />
        <RadioButton
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/h_pital_de_circonscription"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:checked="false"
            />
        <RadioButton
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/en_maternit_priv_e"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:checked="false"
            />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <CheckBox
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/la_grossesse"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
        <CheckBox
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/accouchement_"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
        <CheckBox
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/suites_couches"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
        <CheckBox
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/les_diff_rents_moments"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            />
        </LinearLayout>
            <ImageView
                android:id="@+id/conseilq4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/conseil"
                android:layout_marginStart="50dp"/>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conf"
        android:text="@string/confirmer"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        />
</LinearLayout>