<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MenuActivity"
    android:background="@drawable/roses_background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1">
    <TextView
        android:id="@+id/entete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/sorts_mill_goudy"
        android:text="@string/commencer"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:drawableTint="#E91E63"
        android:text="@string/info_perso"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@android:drawable/arrow_down_float"
        android:drawablePadding="10dp"
        />
    <TextView
        android:id="@+id/Prenatal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:drawableTint="#E91E63"
        android:text="@string/periode_prenatale"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@android:drawable/arrow_down_float"
        android:drawablePadding="10dp"/>
    <TextView
        android:id="@+id/Travail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:drawableTint="#E91E63"
        android:text="@string/travail"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@android:drawable/arrow_down_float"
        android:drawablePadding="10dp"/>
    <TextView
        android:id="@+id/Acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:drawableTint="#E91E63"
        android:text="@string/accouchement"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@android:drawable/arrow_down_float"
        android:drawablePadding="10dp"/>
    <TextView
        android:id="@+id/Post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:drawableTint="#E91E63"
        android:text="@string/post_partum"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@android:drawable/arrow_down_float"
        android:drawablePadding="10dp"/>
    <SeekBar
        android:id="@+id/seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_margin="20dp"

        />
    <Button
        android:id="@+id/reponses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/consulter_rep"
        />
</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decon"
        android:text="@string/deconnexion"
        android:layout_gravity="center"
        />
</LinearLayout>