<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LangueActivity"
    android:background="@color/rose">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/titre"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="@font/alex_brush"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/alegreya_italic"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="35sp" />
    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/creer"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/frButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/Francais"/>
        <Button
            android:id="@+id/arButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/Arabe"/>
    </LinearLayout>

</LinearLayout>